# opentelemetry-example

./: .pre-commit-config.yaml  Cargo.toml  docker-compose.yml  flake.nix
otel/: config.yml
src/: client.rs  server.rs
